# matrix-methods-cpp

./: .gitignore  README.md
MatrixMethods/: CMakeLists.txt
MatrixMethods/include/: ANN.hpp  Activation.hpp  CNN.hpp  Conv2D.hpp  DataLoader.hpp  Dense.hpp  KernelRegression.hpp  Layer.hpp  LinearRegression.hpp  MatrixMethods  SVM.hpp  data.hpp
MatrixMethods/src/: ANN.cpp  Activation.cpp  CNN.cpp  Conv2D.cpp  DataLoader.cpp  Dense.cpp  KernelRegression.cpp  LinearRegression.cpp  SVM.cpp  data.cpp
ann/: CMakeLists.txt
ann-relu-mse/include/: ann.hpp  util.hpp
ann-relu-mse/src/: main.cpp
ann/include/: ANN.hpp  Activation.hpp  CNN.hpp  Conv2D.hpp  DataLoader.hpp  Dense.hpp  Layer.hpp  common.hpp  data.hpp  util.hpp
ann/models/784-96-32-10/: model_layer_0_bias.csv  model_layer_0_weights.csv  model_layer_2_bias.csv  model_layer_2_weights.csv  model_layer_4_bias.csv  model_layer_4_weights.csv
ann/models/cats-vs-dogs/: model_layer_0_bias.csv  model_layer_2_bias.csv  model_layer_2_weights.csv  model_layer_4_bias.csv  model_layer_6_weights.csv
ann/models/fashion/784-96-32-10/: model_layer_2_bias.csv
ann/models/fashion/ann-1/: model_layer_4_bias.csv
ann/models/fashion/cnn-1/: model_conv_0_biases.csv  model_conv_0_kernels.csv  model_dense_0_bias.csv  model_dense_0_weights.csv  model_dense_2_bias.csv  (+1 more)
ann/scripts/: cats-vs-dogs-cnn.cpp  fashion-ann.cpp  fashion-cnn.cpp
ann/src/: ANN.cpp  Activation.cpp  CNN.cpp  Conv2D.cpp  DataLoader.cpp  Dense.cpp  data.cpp  main.cpp
convolutional-ann/include/: ann_functions.hpp  cnn.hpp  util.hpp
convolutional-ann/src/: main.cpp
credit-card-fraud/include/: gd.hpp
credit-card-fraud/src/: main.cpp
default/: CMakeLists.txt
default/src/: main.cpp
functional-ann/include/: ann_functions.hpp  functional_ann.hpp  util.hpp
functional-ann/src/: main.cpp
isvt/: CMakeLists.txt
isvt/src/: main.cpp
k-means/src/: main.cpp
kernel-svm/: CMakeLists.txt
kernel-svm/include/: util.hpp
kernel-svm/src/: main.cpp
linear-regression/include/: LinearRegression.hpp
linear-regression/src/: LinearRegression.cpp  main.cpp
regression/include/: KernelRegression.hpp  LinearRegression.hpp  SVM.hpp
regression/src/: KernelRegression.cpp  LinearRegression.cpp  SVM.cpp  main.cpp
sgd/include/: gd.hpp  util.hpp
sgd/src/: main.cpp
testing/: CMakeLists.txt
testing/include/: load_data.hpp  util.hpp
testing/models/cats-vs-dogs/: model_layer_4_weights.csv  model_layer_6_bias.csv
testing/models/fashion/784-96-32-10/: model_layer_4_weights.csv
testing/models/fashion/ann-1/: model_layer_0_bias.csv
testing/models/fashion/cnn-1/: model_dense_2_bias.csv
testing/scripts/: fashion-ann.cpp  fashion-cnn.cpp  kernel_mnist.cpp  kernel_param_test.cpp
testing/src/: main.cpp
wikipedia-wisconsin/: CMakeLists.txt
wikipedia-wisconsin/src/: dense.cpp  sparse.cpp
